Tue Oct 17 12:05:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-rtems.h:
	  Cleanup

        * include/makeinclude/plaform_rtems.x_g++.GNU:
	  Improved for rtems 4.6.6

Tue Oct 17 07:03:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-rtems.h:
	* ace/OS_NS_unistd.inl:
	  Added support for ACE_LACKS_FDOPEN

Mon Oct 16 21:29:57 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * THANKS: Updated Chris Reed's entry in the list.

Mon Oct 16 20:04:59 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

          This change fixes bug#2612. See the description for the gory
          details. In a nutshell, the problem is caused by the fact that
          static services, loaded from a DLL, as part of a dynamic service
          initialization can not be safely finalized when the dynamic
          service's DLL gets unloaded. This was historically handled by
          simply not unloading DLLs, and by finalizing all services at
          process exit. With the introduction of the local configurations
          feature, this changed.

          The finalization order was supposed to be guaranteed by the
          ordering of the services in the repository. It really was a
          kludge, because when dynamically loading and removing services
          the order can change.  Then whenever the process tries to clean
          up, the dynamic service's DLL can be unloaded (because it gets
          finalized first), and the static services' destructor code would
          become inaccessible. The situation results in a SEGV at exit().

        * ace/DLL.h:
        * ace/DLL.cpp:

          Made assignment operator return a non-const reference to make it
          well-formed. See C++ Standard, section "[special]".

        * ace/DLL_Manager.cpp:
        * ace/Dynamic_Service_Base.cpp (instance):
        * ace/Parse_Node.cpp:

          Fixed formatting and logging

        * ace/Service_Config.cpp (parse_args_i):
