@@ -155,8 +155,8 @@ document</a>.</p><p>
     <td>Maintains ACE on many platforms required for their ACE and
         TAO service offerings. Besides the standard DOC group platforms
         we also support AIX, Borland C++ Builder 6/2006, CBuilderX 1.0, MinGW,
-        Cygwin, VxWorks 5.5.1 & 6.2 & 6.3, OpenVMS 7.3-2 & 8.2-1,
-        Tru64, SuSE Linux on Alpha/IA32/EM64T,
+        Cygwin, VxWorks 5.5.x & 6.x, OpenVMS 8.2-1 & 8.3,
+        Tru64, SuSE Linux on Alpha/IA32/EM64T, RTEMS, LynxOS, 
         HPUX 11i v2/v2 32/64 bit on PA-RISC, and
         HPUX 11i v2 on Itanium. The Intel C++ compiler is supported on
         Windows 32/64bit, Linux IA32/EM64T/Itanium2.
@@ -182,7 +182,7 @@ document</a>.</p><p>
         Linux on PPC; OpenMVS;
         Tandem; SCO; FreeBSD; NetBSD; OpenBSD;
         Macintosh OS X; OS/9; PharLap TNT Embedded ToolSuite 9.1;
-        QNX RTP and Neutrino 2.0; RTEMS; Interix (Windows Services for Unix)
+        QNX RTP and Neutrino 2.0; Interix (Windows Services for Unix)
     </td>
   </tr><tr>
     <th>Not maintained</th>
